--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -372,6 +372,12 @@
        <height>211</height>
       </rect>
      </property>
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="rowCount">
       <number>1</number>
      </property>
