--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -281,6 +281,19 @@
       <string>cm</string>
      </property>
     </widget>
+    <widget class="QCheckBox" name="cb_flip">
+     <property name="geometry">
+      <rect>
+       <x>130</x>
+       <y>190</y>
+       <width>111</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Flip Show</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QGroupBox" name="groupBox_2">
     <property name="geometry">
@@ -755,7 +768,7 @@ movement</string>
       <string>X:</string>
      </property>
     </widget>
-    <widget class="QCheckBox" name="cb_showMask_2">
+    <widget class="QCheckBox" name="tr_ena">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -794,7 +807,7 @@ movement</string>
       <string>Radius:</string>
      </property>
     </widget>
-    <widget class="QSpinBox" name="in_minDepth_2">
+    <widget class="QSpinBox" name="tr_x">
      <property name="geometry">
       <rect>
        <x>70</x>
@@ -813,7 +826,7 @@ movement</string>
       <number>10</number>
      </property>
     </widget>
-    <widget class="QSpinBox" name="in_minDepth_3">
+    <widget class="QSpinBox" name="tr_y">
      <property name="geometry">
       <rect>
        <x>70</x>
@@ -832,7 +845,7 @@ movement</string>
       <number>10</number>
      </property>
     </widget>
-    <widget class="QSpinBox" name="in_minDepth_4">
+    <widget class="QSpinBox" name="tr_r">
      <property name="geometry">
       <rect>
        <x>70</x>
@@ -849,6 +862,57 @@ movement</string>
      </property>
      <property name="value">
       <number>10</number>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="tr_test">
+     <property name="geometry">
+      <rect>
+       <x>150</x>
+       <y>290</y>
+       <width>111</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Test</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_17">
+     <property name="geometry">
+      <rect>
+       <x>140</x>
+       <y>330</y>
+       <width>111</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Current Color:</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="tr_color">
+     <property name="geometry">
+      <rect>
+       <x>160</x>
+       <y>350</y>
+       <width>111</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <weight>50</weight>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>NONE</string>
      </property>
     </widget>
    </widget>
